# action-template

./: Dockerfile  README.md  README.md.template  action.yml  app.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: example.yml  generate-readme.yml  template-readme.yml
action_template/: __main__.py  main.py
sample/: data.json  github.json
tests/: test_main.py
tests/data/: data.json  data.md  data.yml  sample.md.template
